--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,32 @@
-slack_bolt>=1.18.0
-slack_sdk>=3.21.3
-python-dotenv>=1.0.0
+# Core web framework and API
 Flask>=2.2.5
+Flask-CORS>=4.0.0
+
+# Environment and configuration
+python-dotenv>=1.0.0
+
+# HTTP requests (for API testing)
+requests>=2.28.0
+
+# Poker engine core
 PyPokerEngine @ git+https://github.com/ishikota/PyPokerEngine.git
+
+# Development and testing dependencies
+pytest>=7.0.0
+pytest-cov>=4.0.0
+pytest-mock>=3.10.0
+mock>=4.0.0
+nose>=1.3.7
+
+# Code quality and linting
+black>=22.0.0
+flake8>=5.0.0
+mypy>=1.0.0
+
+# Documentation
+mkdocs>=1.4.0
+mkdocs-material>=8.0.0
+
+# Utilities
+click>=8.0.0
+rich>=12.0.0
